interfaces for iocs, playbooks and logs